update git submodule error message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ elseif (ENABLE_PLOTTERS)
     set(QWT_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/qwt-6.1.2/src)
 
     if (NOT EXISTS ${QWT_SRC_DIR})
-        message(FATAL_ERROR "Qwt submodule not configured (git submodule init && git submodule update)")
+        message(FATAL_ERROR "Qwt submodule not configured (git submodule update --init --recursive)")
     endif ()
 
     include_directories(${QWT_SRC_DIR})
