added qwt dial widget

--- a/QwtWidgets/CMakeLists.txt
+++ b/QwtWidgets/CMakeLists.txt
@@ -16,6 +16,7 @@ POTHOS_MODULE_UTIL(
         QwtSlider.cpp
         QwtThermo.cpp
         QwtKnob.cpp
+        QwtDial.cpp
     ENABLE_DOCS
     LIBRARIES ${Qt5_LIBRARIES}
     DESTINATION plotters
