color map preview icon

--- a/Spectrogram/CMakeLists.txt
+++ b/Spectrogram/CMakeLists.txt
@@ -20,6 +20,7 @@ POTHOS_MODULE_UTIL(
         SpectrogramDisplay.cpp
         ColorMapEntry.cpp
         GeneratedColorMaps.cpp
+        QwtColorMapMaker.cpp
     DOC_SOURCES Spectrogram.cpp
     LIBRARIES
         ${Qt5_LIBRARIES}
