--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Josh Blum <josh@pothosware.com>
 Build-Depends:
     debhelper (>= 9.0.0),
     cmake (>= 2.8.9),
+    libpoco-dev (>= 1.6),
     libpothos-dev,
     libspuce-dev,
     qtbase5-dev, libqt5svg5-dev, libqt5opengl5-dev,
