--- a/LogicAnalyzer/CMakeLists.txt
+++ b/LogicAnalyzer/CMakeLists.txt
@@ -16,6 +16,8 @@ POTHOS_MODULE_UTIL(
         LogicAnalyzer.cpp
         LogicAnalyzerDisplay.cpp
     DOC_SOURCES LogicAnalyzer.cpp
-    LIBRARIES ${Qt5_LIBRARIES}
+    LIBRARIES
+        Qt5::Widgets
+        PothosPlotterUtils
     DESTINATION plotters
 )
