fix build with interface libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ if (Spuce_FOUND)
     message(STATUS "Spuce_VERSION: ${Spuce_VERSION}")
     message(STATUS "Spuce_INCLUDE_DIRS: ${Spuce_INCLUDE_DIRS}")
     message(STATUS "Spuce_LIBRARIES: ${Spuce_LIBRARIES}")
+    add_library(spuce INTERFACE)
+    target_link_libraries(spuce INTERFACE "${Spuce_LIBRARIES}")
+    target_include_directories(spuce INTERFACE "${Spuce_INCLUDE_DIRS}")
 else (Spuce_FOUND)
     message(WARNING "Spuce filter designer library not found...")
 endif (Spuce_FOUND)
@@ -68,9 +71,9 @@ endif (QWT_FOUND)
 
 if (QWT_FOUND)
 
-    add_library(PothosQwt SHARED IMPORTED)
-    set_target_properties(PothosQwt PROPERTIES IMPORTED_LOCATION ${QWT_LIBRARIES})
-    set_target_properties(PothosQwt PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${QWT_INCLUDE_DIRS}")
+    add_library(PothosQwt INTERFACE)
+    target_link_libraries(PothosQwt INTERFACE "${QWT_LIBRARIES}")
+    target_include_directories(PothosQwt INTERFACE "${QWT_INCLUDE_DIRS}")
     target_compile_definitions(PothosQwt INTERFACE -DQWT_DLL)
     message(STATUS "QWT_INCLUDE_DIRS: ${QWT_INCLUDE_DIRS}")
     message(STATUS "QWT_LIBRARIES: ${QWT_LIBRARIES}")
