only make spuce target when missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,11 @@ if (Spuce_FOUND)
     message(STATUS "Spuce_VERSION: ${Spuce_VERSION}")
     message(STATUS "Spuce_INCLUDE_DIRS: ${Spuce_INCLUDE_DIRS}")
     message(STATUS "Spuce_LIBRARIES: ${Spuce_LIBRARIES}")
+    if (NOT TARGET spuce)
     add_library(spuce INTERFACE)
     target_link_libraries(spuce INTERFACE "${Spuce_LIBRARIES}")
     target_include_directories(spuce INTERFACE "${Spuce_INCLUDE_DIRS}")
+    endif()
 else (Spuce_FOUND)
     message(WARNING "Spuce filter designer library not found...")
 endif (Spuce_FOUND)
